# django-sample-app

./: .env.example  .pre-commit-config.yaml  README.md  main.py  manage.py  pyproject.toml  urls.py
.github/workflows/: ci.yml
django_sample_app/: asgi.py  settings.py  wsgi.py
django_sample_app/docs/: study.md
django_sample_app/tasks/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
django_sample_app/tasks/migrations/: 0001_initial.py
docs/: deployment.md  study.md
static/css/: main.css
static/js/: main.js
templates/: base.html
templates/partials/: messages.html  navbar.html
templates/tasks/: task_confirm_delete.html  task_form.html  task_list.html
tests/: test_tasks_integration.py
