[project]
name = "django-sample-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0,<6.0",
    "dj-database-url>=2.1.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "ruff>=0.5.7",
    "pre-commit>=3.8.0",
    "pytest>=8.3.0",
    "pytest-django>=4.8.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_sample_app.settings"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]
addopts = [
    "--ds=django_sample_app.settings",
    "-q",
]

[tool.black]
line-length = 88
target-version = ["py313"]
extend-exclude = "migrations"

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "DJ"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
